--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -15,3 +15,40 @@ gap: 20px;
 color: #49447e;
 font-size: 18px;
 }
+.navber-right{
+    display: flex;
+    align-items: center;
+    gap: 40px;
+}
+.navbar button{
+    border-radius: 50px;
+    background: transparent;
+    color: #49557e;
+    border: 1px solid tomato;
+    padding: 10px 30px;
+    cursor: pointer;
+    transition: 0.3s;
+}
+.navbar button:hover{
+    background-color: #fff4f2;
+
+}
+.navbar .active {
+    padding-bottom: 2px;
+    border-bottom: 2px solid #49557e;
+}
+.navbar li{
+    cursor: pointer;
+}
+.navbar-search-icon{
+    position: relative;
+}
+.navbar-search-icon .dot{
+    position: absolute;
+    min-height: 10px;
+    min-width: 10px;
+    background-color: tomato;
+    top: -8px;
+    right: -8px;
+
+}
