--- a/src/Components/AppDownload/AppDownload.css
+++ b/src/Components/AppDownload/AppDownload.css
@@ -21,3 +21,13 @@
 .app-download-platforms img:hover{
    transform: scale(1.05);
 }
+
+.app-download-platforms img{
+    width: max(30vw,120px);
+    max-width: 180px;
+    transition: 0.5s;
+    cursor: pointer;
+}
+.app-download-platforms img:hover{
+   transform: scale(1.05);
+}
