--- a/src/index.css
+++ b/src/index.css
@@ -2,9 +2,10 @@
 
 *{
   padding: 0;
-  margin: 5px;
+  margin: 0;
   box-sizing: border-box;
   font-family: outfit;
+  scroll-behavior: smooth;
 }
 body{
   min-height: 100vh;
